Saque seccion de Rulas y lacias

--- a/Productos.html
+++ b/Productos.html
@@ -61,7 +61,7 @@
 
 <section class="fondo-productos">
 
-
+<!-- 
     <section class="rulas-lacias">
         <h2 class="titulo-rulas"><a href="#Rulas"> Rulas </a></h2>
         <h2 class="titulo-lacias"><a href="#Lacias"> Lacias </a></h2>
@@ -69,12 +69,11 @@
     <div id="Rulas">
         <h3>Rulas</h3>
     </div>
-    <!--       Carrusel de imagenes productos Rulas      -->
 
     <div id="Lacias">
         <h3>Lacias</h3>
-    </div>
-    <!--       Carrusel de imagnes productos Lacias      -->
+    </div> -->
+
 
 
     <h3 class="bekim">BEKIM</h3>
