Agrege una foto desde Css

--- a/Productos.html
+++ b/Productos.html
@@ -81,7 +81,7 @@
     <nav>
 
         <ul class="contenedor">
-            <li class="bimg img1"> <img src="multimedia/Bekim/bekim-img1.jpg" alt=""></li>
+            <li class="bimg img1"> <img src="" alt=""></li>
             <div class="titulo-desc titulo1">Low Shampoo Argán 4 oils 250gr</div>
             <div class="desc desc1">Descripcion1</div>
 
