--- a/Productos.html
+++ b/Productos.html
@@ -61,7 +61,7 @@
 
 <section class="fondo-productos">
 
-<!-- 
+
     <section class="rulas-lacias">
         <h2 class="titulo-rulas"><a href="#Rulas"> Rulas </a></h2>
         <h2 class="titulo-lacias"><a href="#Lacias"> Lacias </a></h2>
@@ -69,11 +69,12 @@
     <div id="Rulas">
         <h3>Rulas</h3>
     </div>
+    <!--       Carrusel de imagenes productos Rulas      -->
 
     <div id="Lacias">
         <h3>Lacias</h3>
-    </div> -->
-
+    </div>
+    <!--       Carrusel de imagnes productos Lacias      -->
 
 
     <h3 class="bekim">BEKIM</h3>
@@ -81,7 +82,7 @@
     <nav>
 
         <ul class="contenedor">
-            <li class="bimg img1"> <img src="" alt=""></li>
+            <li class="bimg img1"> <img src="multimedia/Bekim/bekim-img1.jpg" alt=""></li>
             <div class="titulo-desc titulo1">Low Shampoo Argán 4 oils 250gr</div>
             <div class="desc desc1">Descripcion1</div>
 
