Volvi atras con ctrl Z y se fue todo, hice de nuevo

--- a/Productos.html
+++ b/Productos.html
@@ -61,7 +61,8 @@
 
 <section class="fondo-productos">
 
-
+<!-- --------------- YA no lo uso pero lo dejo por las dudas --------------- -->
+<!--
     <section class="rulas-lacias">
         <h2 class="titulo-rulas"><a href="#Rulas"> Rulas </a></h2>
         <h2 class="titulo-lacias"><a href="#Lacias"> Lacias </a></h2>
@@ -69,13 +70,13 @@
     <div id="Rulas">
         <h3>Rulas</h3>
     </div>
-    <!--       Carrusel de imagenes productos Rulas      -->
+
 
     <div id="Lacias">
         <h3>Lacias</h3>
     </div>
-    <!--       Carrusel de imagnes productos Lacias      -->
 
+-->
 
     <h3 class="bekim">BEKIM</h3>
 
