--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" href="multimedia/fondo-liso.jpg">
@@ -29,9 +33,6 @@
 
         <!-- acá iría algo como para poner de fondo, detras del logo, y aun no defino si la lista tambien adentro o por debajo -->
 
-        <div>
-            <img src="" alt="">
-        </div>
 
         <nav class="menu">
             <ul class="menu-1">
@@ -45,7 +46,25 @@
 
     </header>
 
-<!-- ------------------------ Fin de la estructura ------------------------- -->
+
+
+<section class="boton">
+    <div class="btn-group" role="group">
+        <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Menú
+        </button>
+        <ul class="dropdown-menu bg-body" aria-labelledby="btnGroupDrop1">
+            <li><a class="dropdown-item " href="index.html">Inicio</a></li>
+            <li><a class="dropdown-item" href="Servicios.html">Servicios</a></li>
+            <li><a class="dropdown-item" href="Productos.html">Productos</a></li>
+            <li><a class="dropdown-item" href="Rulitips.html">Rulitips</a></li>
+            <li><a class="dropdown-item" href="Contacto.html">Contacto</a></li>
+            <li><a class="dropdown-item" href="Rulipedia.html">Rulipedia</a></li>
+        </ul>
+    </div>
+</section>
+    <!-- ------------------------ Fin de la estructura ------------------------- -->
 
 
 
@@ -80,7 +99,7 @@
 
 
 
-            
+
 
             <nav>
                 <ul class="nav-footer">
@@ -110,7 +129,12 @@
 
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
