--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!-- --------------------------- Link bootstrap ---------------------------- 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-
+-->
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" href="multimedia/fondo-liso.jpg">
@@ -47,7 +47,9 @@
     </header>
 
 
+    <!-- --------------------------- Boton bootstrap --------------------------- -->
 
+<!--
 <section class="boton">
     <div class="btn-group" role="group">
         <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown"
@@ -64,6 +66,8 @@
         </ul>
     </div>
 </section>
+-->
+
     <!-- ------------------------ Fin de la estructura ------------------------- -->
 
 
@@ -129,12 +133,19 @@
 
     </footer>
 
+
+
+
+
+    <!-- -------------------------- Efectos bootstrap -------------------------- 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
+    -->
+    
 </body>
 
 </html>
