--- a/Servicios.html
+++ b/Servicios.html
@@ -23,7 +23,7 @@
         <!-- Acá iría el logo, si puedo hacer que se dibuje en vez de ser una imagen fija -->
 
         <div class="logo">
-            <a href="index.html"> <img src="/multimedia/Logo.png" alt="Que rulasos"> </a>
+            <a href="index.html"> <img src="/multimedia/logo.png" alt="Que rulasos"> </a>
         </div>
 
         <!-- acá iría algo como para poner de fondo, detras del logo, y aun no defino si la lista tambien adentro o por debajo -->
