--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- --------------------------- Link bootstrap ---------------------------- 
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
--->
+
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" href="multimedia/fondo-liso.jpg">
@@ -47,26 +47,7 @@
     </header>
 
 
-    <!-- --------------------------- Boton bootstrap --------------------------- -->
 
-<!--
-<section class="boton">
-    <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Menú
-        </button>
-        <ul class="dropdown-menu bg-body" aria-labelledby="btnGroupDrop1">
-            <li><a class="dropdown-item " href="index.html">Inicio</a></li>
-            <li><a class="dropdown-item" href="Servicios.html">Servicios</a></li>
-            <li><a class="dropdown-item" href="Productos.html">Productos</a></li>
-            <li><a class="dropdown-item" href="Rulitips.html">Rulitips</a></li>
-            <li><a class="dropdown-item" href="Contacto.html">Contacto</a></li>
-            <li><a class="dropdown-item" href="Rulipedia.html">Rulipedia</a></li>
-        </ul>
-    </div>
-</section>
--->
 
     <!-- ------------------------ Fin de la estructura ------------------------- -->
 
@@ -79,7 +60,30 @@
 
         <h2 class="novedades"> <a href="Productos.html"> Novedades </a> </h2>
 
-        <img src="multimedia/Productos.jpg" alt="Foto Producto" class="imagen_novedades">
+        <section class="carrusel-novedades">
+            <div id="carouselWithControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="multimedia/Bekim/bekim-img1.jpg" class="d-block mx-auto w-25" alt="Slide 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="multimedia/Bekim/bekim-img2.jpg" class="d-block mx-auto w-25" alt="Slide 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="multimedia/Bekim/bekim-img4.jpg" class="d-block mx-auto w-25" alt="Slide 3">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselWithControls" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselWithControls" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </a>
+            </div>
+        </section>
+
 
         <h2 class="nuestros-trabajos"> <a href="Servicios.html"> Nuestros trabajos</a></h2>
 
@@ -137,15 +141,15 @@
 
 
 
-    <!-- -------------------------- Efectos bootstrap -------------------------- 
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-    -->
-    
+
+
 </body>
 
 </html>
