--- a/Rulitips.html
+++ b/Rulitips.html
@@ -22,7 +22,7 @@
         <!-- Acá iría el logo, si puedo hacer que se dibuje en vez de ser una imagen fija -->
 
         <div class="logo">
-            <a href="index.html"> <img src="/multimedia/logo.png" alt="Que rulasos"> </a>
+            <a href="index.html"> <img src="multimedia/logo.png" alt="Que rulasos"> </a>
         </div>
 
         <!-- acá iría algo como para poner de fondo, detras del logo, y aun no defino si la lista tambien adentro o por debajo -->
@@ -49,7 +49,7 @@
     <!--                    Ver si dejar solo la foto que dice Rulitips             -->
     <h2 class="titulo-rulitips">RuliTips</h2>
 
-    <div> <img src="/multimedia/RuliTips.png" alt="RuliTips"></div>
+
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil ex veritatis, quasi, voluptatibus nesciunt ab
         quisquam ipsam odio tempora quae soluta officia, fuga nam magnam reprehenderit minima voluptate architecto?</p>
